*inkscape-1.0.1*
::gentoo			move to python3, change to eapi7, change use flag order, update keywords, update dependencies
::prototype99		improve use flag logic
*inkscape-0.92.4-r3*
::dantrell-gnome	remove lxml and scour dependencies, add support for older glibmm, more advanced numpy dependency, uniconvertor use flag
::prototype99		make better use of has_version
*inkscape-0.92.4-r2*
::gentoo
-update-copyright year
-stabilise a lot of architectures
-improve dependencies#
-improve support for binary package users
-add support for newer poppler versions
-improve parallel make support
::prototype99
-use python3 for translations with opensuse patch
-add python 3 for dxf and other extensions
-remove deprecated python usedep
*inkscape-0.92.4-r1*
::prototype99		add experimental pypy compatibility
*inkscape-0.92.4*
::gentoo			poppler patch
::gnome-next		base ebuild
::prototype99		remove unneeded gtkspell dependency